--- a/page10.html
+++ b/page10.html
@@ -62,7 +62,7 @@
         <h2>Thank You for Crafting with Us</h2>
         <p>We hope you've enjoyed crafting this HTML showcase. Whenever you need a refresher on HTML elements, come back to these pages. Now, it's time to take your newfound knowledge and craft amazing web experiences of your own.</p>
         
-        <p><a href="index.html">Return to Your Web Creation</a></p>
+        <p><a href="index.html">Return to Home</a></p>
     </section>
 </body>
 </html>
